<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/txtReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/activity_debug_referencia"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <br.ufrj.cos.labia.aips.SimpleAndarView
        android:id="@+id/roomView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btTrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_debug_treinar" />
    
    <Button
        android:id="@+id/btCollect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_debug_coleta" />

</LinearLayout>