<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogfragment_novoandar_nome"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:inputType="text"
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogfragment_novoandar_referencia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:inputType="text"
            android:id="@+id/campoReferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogfragment_novoandar_largura"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/campoLargura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogfragment_novoandar_altura"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/campoAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="2" />

    </LinearLayout>

</ScrollView>